other-cel/restrict-clusterrole-nodesproxy/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: restrict-clusterrole-nodesproxy
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../restrict-clusterrole-nodesproxy.yaml
    - patch:
        resource:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          metadata:
            name: restrict-clusterrole-nodesproxy
          spec:
            validationFailureAction: Enforce
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: cr-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: cr-bad.yaml
